src/objects/Properties__c.object
<CustomObject>
    <fields>
        <fullName>Property_Address_Street_Type__c</fullName>
        <inlineHelpText>Enter the street type for this Property address (if there is no street type for this address, select &quot;Not Applicable&quot;). Property address information must match the information in the closing documents.</inlineHelpText>
        <label>Property Address Street Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>[Not Applicable]</fullName>
                </value>
                <value>
                    <fullName>Alley</fullName>
                </value>
                <value>
                    <fullName>Avenue</fullName>
                </value>
                <value>
                    <fullName>Boulevard</fullName>
                </value>
                <value>
                    <fullName>Circle</fullName>
                </value>
                <value>
                    <fullName>Court</fullName>
                </value>
                <value>
                    <fullName>Drive</fullName>
                </value>
                <value>
                    <fullName>Highway</fullName>
                </value>
                <value>
                    <fullName>Lane</fullName>
                </value>
                <value>
                    <fullName>Loop</fullName>
                </value>
                <value>
                    <fullName>Park</fullName>
                </value>
                <value>
                    <fullName>Place</fullName>
                </value>
                <value>
                    <fullName>Plaza</fullName>
                </value>
                <value>
                    <fullName>Road</fullName>
                </value>
                <value>
                    <fullName>Row</fullName>
                </value>
                <value>
                    <fullName>Square</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>Terrace</fullName>
                </value>
                <value>
                    <fullName>Walk</fullName>
                </value>
                <value>
                    <fullName>Way</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Address_Zip_Code__c</fullName>
        <inlineHelpText>Enter the zip code for this Property address. Property address information must match the information in the closing documents.</inlineHelpText>
        <label>Property Address Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Address_in_Planning_Approval__c</fullName>
        <label>Property Address in Planning Approval</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Property_Listing_Category__c</fullName>
        <formula>IF ( !( RecordType.Name = &quot;Development&quot;) , (

IF( ISPICKVAL(Occupancy_Type__c, &quot;Ownership&quot;) ,
IF ( ISPICKVAL(New_or_Existing__c , &quot;New&quot;) , &quot;New Sale&quot;, &quot;Resale&quot; ) , 
IF ( ISPICKVAL(New_or_Existing__c, &quot;New&quot;) , &quot;New Rental&quot; , &quot;Rerental&quot; )
) ) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Listing Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Management_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property Management Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Property Management</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Name__c</fullName>
        <description>Name of a Property within a Development</description>
        <inlineHelpText>Name of a Property within a Development</inlineHelpText>
        <label>Property Name</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Property_Photo_1__c</fullName>
        <label>Property Photo 1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Property_Photo_2__c</fullName>
        <label>Property Photo 2</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Property_Photo_3__c</fullName>
        <label>Property Photo 3</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Property_Program_Full_Name__c</fullName>
        <formula>IF ( 

   (ISPICKVAL(Property_Program__c , &quot;BMR&quot;) &amp;&amp; ISPICKVAL(Occupancy_Type__c, &quot;Ownership&quot;)) , &quot;Inclusionary Housing Program Below Market Rate Ownership&quot; , 

        (IF (
            (ISPICKVAL(Property_Program__c, &quot;BMR&quot;) &amp;&amp; ISPICKVAL(Occupancy_Type__c, &quot;Rental&quot;)) , &quot;Inclusionary Housing Program Below Market Rate Rentals&quot; ,

        (IF (
            (ISPICKVAL(Property_Program__c , &quot;LEP&quot;)) , &quot;Inclusionary Housing Program Below Market Rate Limited Equity Program Ownership&quot; , 

                (IF (
                    (ISPICKVAL(Property_Program__c, &quot;City 2nd&quot;)) , &quot;City Second Loan Program with Right of First Refusal&quot; , &quot;error&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Program Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Program__c</fullName>
        <label>Property Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BMR</fullName>
                </value>
                <value>
                    <fullName>LEP</fullName>
                </value>
                <value>
                    <fullName>City 2nd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Record_ID__c</fullName>
        <description>Used as a master property record ID to associate units with their original property (this way when units are resold or re-rented a new property record can be created with new pricing/marketing plans that will affect only the resale re-rental units while the units have a way of maintaining their association with the original property). This will make setting up reports of all units in a property easier even if units are associated with new property records as they are resold or re-rented.</description>
        <displayFormat>PROP-{YY}-{00000}</displayFormat>
        <label>Property Record ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <label>Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Condo</fullName>
                </value>
                <value>
                    <fullName>Townhouse</fullName>
                </value>
                <value>
                    <fullName>Co-op</fullName>
                </value>
                <value>
                    <fullName>Single Family</fullName>
                </value>
                <value>
                    <fullName>Apartment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_Marketing_Launch_Date__c</fullName>
        <inlineHelpText>This is the date the posting will start to appear on the MOHCD website.</inlineHelpText>
        <label>Proposed Marketing Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Providing_Commission_to__c</fullName>
        <description>Will you be providing commission for any market rate buyer’s realtor in your building?</description>
        <inlineHelpText>Will you be providing commission for any market rate buyer’s realtor in your building?</inlineHelpText>
        <label>Commissions to Market Rate Buyer Realtor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rent_Range_of_Market_Rate_Units_by_Type__c</fullName>
        <label>Rent Range of Market Rate Units by Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Deposit_Amount__c</fullName>
        <label>Required Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Price_Range_if_property_level__c</fullName>
        <label>Sales Price Range if more than 1 unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Bathrooms__c</fullName>
        <label>Search Bathrooms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Search_Bedrooms__c</fullName>
        <label>Search Bedrooms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Search_Price_Max__c</fullName>
        <label>Search Price Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Search_Price_Min__c</fullName>
        <label>Search Price Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Search_Sq_Ft_Max__c</fullName>
        <label>Search Sq Ft Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Search_Sq_Ft_Min__c</fullName>
        <label>Search Sq Ft Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Notes__c</fullName>
        <label>Special Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stacker_Spaces_Description__c</fullName>
        <label>Stacker Spaces Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stacker_Spaces__c</fullName>
        <label>Stacker Spaces?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <defaultValue>&quot;CA&quot;</defaultValue>
        <description>Please enter the 2-letter state code.</description>
        <inlineHelpText>Please enter the 2-letter state code.</inlineHelpText>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Steps_you_ll_take_to_ensure_FNMA_appoval__c</fullName>
        <label>Steps you&apos;ll take to ensure FNMA appoval</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <label>Street Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Number__c</fullName>
        <label>Street Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Type__c</fullName>
        <label>Street Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>[Not Applicable]</fullName>
                </value>
                <value>
                    <fullName>Alley</fullName>
                </value>
                <value>
                    <fullName>Avenue</fullName>
                </value>
                <value>
                    <fullName>Boulevard</fullName>
                </value>
                <value>
                    <fullName>Circle</fullName>
                </value>
                <value>
                    <fullName>Court</fullName>
                </value>
                <value>
                    <fullName>Drive</fullName>
                </value>
                <value>
                    <fullName>Highway</fullName>
                </value>
                <value>
                    <fullName>Lane</fullName>
                </value>
                <value>
                    <fullName>Loop</fullName>
                </value>
                <value>
                    <fullName>Park</fullName>
                </value>
                <value>
                    <fullName>Place</fullName>
                </value>
                <value>
                    <fullName>Plaza</fullName>
                </value>
                <value>
                    <fullName>Road</fullName>
                </value>
                <value>
                    <fullName>Row</fullName>
                </value>
                <value>
                    <fullName>Square</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>Terrace</fullName>
                </value>
                <value>
                    <fullName>Walk</fullName>
                </value>
                <value>
                    <fullName>Way</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Temporary_COO_Actual_Issue_Date__c</fullName>
        <description>Temporary Certificate of Occupancy Actual Issue Date</description>
        <inlineHelpText>Temporary Certificate of Occupancy Actual Issue Date</inlineHelpText>
        <label>Temporary COO Actual Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Temporary_COO_Expected_Issue_Date__c</fullName>
        <label>Temporary COO Expected Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_for_Rental_restricted_units__c</fullName>
        <description>For Sources of Government Financing, how long must your units be restricted as rental units under this financing?</description>
        <inlineHelpText>For Sources of Government Financing, how long must your units be restricted as rental units under this financing?</inlineHelpText>
        <label>Time for Rental restricted units</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_of_BMR_1_Bedroom_s__c</fullName>
        <label>Total # of BMR 1 Bedroom&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_BMR_1plus_Bedroom_s__c</fullName>
        <label>Total # of BMR 1+ Bedroom&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_BMR_2_Bedroom_s__c</fullName>
        <label>Total # of BMR 2 Bedroom&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_BMR_2plus_Bedrooms__c</fullName>
        <label>Total # of BMR 2+ Bedrooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_BMR_3_Bedroom_s__c</fullName>
        <label>Total # of BMR 3 Bedroom&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_BMR_3plus_Bedroom_s__c</fullName>
        <label>Total # of BMR 3+ Bedroom&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_BMR_Jr_1_Bedroom_s__c</fullName>
        <label>Total # of BMR Jr. 1 Bedroom&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_BMR_Other_Bedrooms__c</fullName>
        <label>Total # of BMR Other Bedrooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_BMR_SRO_s__c</fullName>
        <label>Total # of BMR SRO&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_BMR_Studio_s__c</fullName>
        <label>Total # of BMR Studio&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_BMR_Units_by_Type__c</fullName>
        <label>Total # of BMR Units by Type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_BMR_Units_in_Building__c</fullName>
        <formula>Total_of_BMR_SRO_s__c +
Total_of_BMR_Studio_s__c +
Total_of_BMR_Jr_1_Bedroom_s__c +
Total_of_BMR_1_Bedroom_s__c +
Total_of_BMR_1plus_Bedroom_s__c +
Total_of_BMR_2_Bedroom_s__c +
Total_of_BMR_2plus_Bedrooms__c +
Total_of_BMR_3_Bedroom_s__c +
Total_of_BMR_3plus_Bedroom_s__c +
Total_of_BMR_4_Bedroom_s__c +
Total_of_BMR_Other_Bedrooms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total # of all BMR SRO, Studio, Jr. 1 Bedroom, 1 Bedroom, 1+ Bedroom, 2 Bedroom, 2+ Bedroom, 3 Bedroom, 3+ Bedroom, 4 Bedroom, and Other bedroom units.</inlineHelpText>
        <label>Total # of BMR Units in Building</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Market_Rate_1_Bedroom_s__c</fullName>
        <label>Total # of Market Rate 1 Bedroom&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Market_Rate_1plus_Bedroom_s__c</fullName>
        <label>Total # of Market Rate 1+ Bedroom&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Market_Rate_2_Bedroom_s__c</fullName>
        <label>Total # of Market Rate 2 Bedroom&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Market_Rate_2plus_Bedroom_s__c</fullName>
        <label>Total # of Market Rate 2+ Bedroom&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Market_Rate_3_Bedroom_s__c</fullName>
        <label>Total # of Market Rate 3 Bedroom&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Market_Rate_3plus_Bedroom_s__c</fullName>
        <label>Total # of Market Rate 3+ Bedroom&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Market_Rate_Jr_1_Bedroom_s__c</fullName>
        <label>Total # of Market Rate Jr. 1 Bedroom&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Market_Rate_Other_Bedroom_s__c</fullName>
        <label>Total # of Market Rate Other Bedroom&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Market_Rate_SRO_s__c</fullName>
        <label>Total # of Market Rate SRO&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Market_Rate_Studio_s__c</fullName>
        <label>Total # of Market Rate Studio&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Market_Rate_Units_in_Building__c</fullName>
        <formula>Total_of_Market_Rate_SRO_s__c + 
Total_of_Market_Rate_Studio_s__c + 
Total_of_Market_Rate_Jr_1_Bedroom_s__c + 
Total_of_Market_Rate_1_Bedroom_s__c + 
Total_of_Market_Rate_1plus_Bedroom_s__c + 
Total_of_Market_Rate_2_Bedroom_s__c + 
Total_of_Market_Rate_2plus_Bedroom_s__c + 
Total_of_Market_Rate_3_Bedroom_s__c + 
Total_of_Market_Rate_3plus_Bedroom_s__c + 
Total_of_Market_Rate_4_Bedroom_s__c + 
Total_of_Market_Rate_Other_Bedroom_s__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total # of all Market Rate SRO, Studio, Jr. 1 Bedroom, 1 Bedroom, 1+ Bedroom, 2 Bedroom, 2+ Bedroom, 3 Bedroom, 3+ Bedroom, 4 Bedroom, and Other bedroom units.</inlineHelpText>
        <label>Total # of Market Rate Units in Building</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Parking_Spaces_for_All_Units__c</fullName>
        <label>Total # of Parking Spaces for All Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Units_in_Building__c</fullName>
        <formula>Total_of_Market_Rate_Units_in_Building__c + Total_of_BMR_Units_in_Building__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total # of Market Rate Units in Building + Total # of BMR Units in Building</inlineHelpText>
        <label>Total # of Units in Building</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Unit__c</fullName>
        <defaultValue>&quot;City Second Loan Program with Right of First Refusal&quot;</defaultValue>
        <label>Type of Unit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unit_Floor__c</fullName>
        <label>Unit Floor #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <label>Unit #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Square_Footage__c</fullName>
        <label>Unit Square Footage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <description>BMR Unit Type
BMR_Unit_Type</description>
        <label>Unit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SRO</fullName>
                </value>
                <value>
                    <fullName>Studio</fullName>
                </value>
                <value>
                    <fullName>Jr. 1 Bedroom</fullName>
                </value>
                <value>
                    <fullName>1 Bedroom</fullName>
                </value>
                <value>
                    <fullName>1+ Bedroom</fullName>
                </value>
                <value>
                    <fullName>2 Bedroom</fullName>
                </value>
                <value>
                    <fullName>2+ Bedroom</fullName>
                </value>
                <value>
                    <fullName>3 Bedroom</fullName>
                </value>
                <value>
                    <fullName>3+ Bedroom</fullName>
                </value>
                <value>
                    <fullName>4 Bedroom</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Zip_Code__c</fullName>
        <label>Unit Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utilities_Paid_By_Renters__c</fullName>
        <label>Utilities Paid By Renters</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Utilities_Paid_by_the_Building__c</fullName>
        <label>Utilities Paid by the Building</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Property Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>What_the_HOA_Dues_cover__c</fullName>
        <label>What the HOA Dues cover?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Will_you_have_preferred_lenders__c</fullName>
        <description>Will you have preferred Lenders for this building?</description>
        <inlineHelpText>Will you have preferred Lenders for this building?</inlineHelpText>
        <label>Will you have preferred lenders?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <label>Year Built</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_AMI_for_Pricing_Unit__c</fullName>
        <inlineHelpText>% of Area Median Income for pricing unit</inlineHelpText>
        <label>% of AMI for Pricing Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_AMI_for_Qualifying_for_Unit__c</fullName>
        <inlineHelpText>% of Area Median Income for qualifying unit</inlineHelpText>
        <label>% of AMI for Qualifying for Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_Bathrooms_Range_if_property_level__c</fullName>
        <label># of Bathrooms Range if more than 1 unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Bathrooms__c</fullName>
        <label># of Bathrooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Bedrooms_Range_if_property_level__c</fullName>
        <label># of Bedrooms Range if more than 1 unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Bedrooms__c</fullName>
        <label># of Bedrooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Below_Ground_Parking_Spaces__c</fullName>
        <label># of Below Ground Parking Spaces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Surface_Level_Above_Parking_Spaces__c</fullName>
        <description># of Surface Level/Above Ground Parking Spaces</description>
        <inlineHelpText># of Surface Level/Above Ground Parking Spaces</inlineHelpText>
        <label># of Surface Level/Above Parking Spaces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>oldListing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>Unit_Number__c</columns>
        <columns>Property_Type__c</columns>
        <columns>Property_Management_Account__c</columns>
        <columns>Marketing_Plan_Approval_Status__c</columns>
        <columns>Pricing_Request_Approval_Status__c</columns>
        <columns>Parent_Development__c</columns>
        <columns>Parent_Property__c</columns>
        <columns>NAME</columns>
        <columns>Street_Number__c</columns>
        <columns>Street_Name__c</columns>
        <columns>Street_Type__c</columns>
        <columns>City__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <label>Property Submission Statuses</label>
    </listViews>
    <listViews>
        <fullName>All_Listings_View</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Property_Listing_Category__c</columns>
        <columns>Apt_Unit__c</columns>
        <columns>Property_Management_Account__c</columns>
        <columns>Development_Name__c</columns>
        <columns>Parent_Development_Name__c</columns>
        <columns>Parent_Property_Name__c</columns>
        <columns>Property_Address_Official_Closing_Docs__c</columns>
        <columns>Property_Type__c</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Listings View</label>
    </listViews>
    <nameField>
        <label>Listing Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>oldListings</pluralLabel>
    <recordTypes>
        <fullName>Development</fullName>
        <active>true</active>
        <description>Development level details which can consist of one or more properties</description>
        <label>Development</label>
    </recordTypes>
    <recordTypes>
        <fullName>Property</fullName>
        <active>true</active>
        <description>Property level details (including the block and lot number)</description>
        <label>Property</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unit</fullName>
        <active>true</active>
        <description>Unit level details for a property (Apt. #, Sq. Ft., # of Bedrooms, etc.)</description>
        <label>Unit</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>App_Deadline_New_Own_45_Days_from_Post</fullName>
        <active>false</active>
        <description>Application deadline for new ownership must be at least 28 days from the first date of posting.</description>
        <errorConditionFormula>IF ( ISPICKVAL(Occupancy_Type__c,&apos;Own&apos;) &amp;&amp; ISPICKVAL(New_or_Existing__c,&apos;New&apos;) &amp;&amp; Application_Deadline_Date_at_5_00pm__c - Posting_Date__c &lt; 45 , true, false )</errorConditionFormula>
        <errorMessage>Application deadline for new ownership must be at least 28 days from the first date of posting.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>App_Deadline_New_Rent_28_Days_from_Post</fullName>
        <active>false</active>
        <description>Application deadline for new rentals must be at least 28 days from the first date of posting.</description>
        <errorConditionFormula>IF ( ISPICKVAL(Occupancy_Type__c,&apos;Rent&apos;) &amp;&amp; ISPICKVAL(New_or_Existing__c,&apos;New&apos;) &amp;&amp; Application_Deadline_Date_at_5_00pm__c - Posting_Date__c &lt; 28 , true, false )</errorConditionFormula>
        <errorDisplayField>Application_Deadline_Date_at_5_00pm__c</errorDisplayField>
        <errorMessage>Application deadline for new rentals must be at least 28 days from the first date of posting.</errorMessage>
    </validationRules>
</CustomObject>